# looping-delay

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  calibration_storage.cc  calibration_storage.hh  debug.hh  notes
.github/workflows/: build_test_firmware.yml
cmake/: 730.jflash  common.cmake  project.cmake
f723/: brain_pinout.hh  sdram_conf.hh
lib/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_cec.h  stm32f7xx_hal_conf_template.h  stm32f7xx_hal_dfsdm.h  stm32f7xx_hal_irda.h  stm32f7xx_hal_lptim.h  stm32f7xx_hal_ltdc.h  stm32f7xx_hal_sai.h  stm32f7xx_hal_smartcard.h  stm32f7xx_hal_spdifrx.h  stm32f7xx_hal_usart.h  stm32f7xx_ll_lptim.h  stm32f7xx_ll_rtc.h  stm32f7xx_ll_tim.h
lib/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_cec.c  stm32f7xx_hal_dfsdm.c  stm32f7xx_hal_dsi.c  stm32f7xx_hal_hcd.c  stm32f7xx_hal_irda.c  stm32f7xx_hal_lptim.c  stm32f7xx_hal_ltdc.c  stm32f7xx_hal_ltdc_ex.c  stm32f7xx_hal_mmc.c  stm32f7xx_hal_nor.c  stm32f7xx_hal_qspi.c  stm32f7xx_hal_rng.c  stm32f7xx_hal_sai.c  stm32f7xx_hal_smartcard.c  stm32f7xx_hal_smbus.c  stm32f7xx_hal_spdifrx.c  stm32f7xx_hal_usart.c  stm32f7xx_ll_lptim.c  stm32f7xx_ll_rtc.c  stm32f7xx_ll_tim.c
lib/STM32MP1xx_HAL_Driver/Src/: stm32mp1xx_ll_tim.c
lib/brainboard/: .clangd  .gitrepo  flash_math.hh
lib/brainboard/conf/: sd_conf.hh
linker/: STM32F723IETx_FLASH.ld  STM32F723IETx_FLASH_BOOTLOADER.ld  STM32F746IEKx_FLASH.ld  STM32F746IEKx_FLASH_BOOTLOADER.ld  stm32mp15xx_ca7.ld
mp153/: brain_conf.hh  brain_pinout.hh
scripts/: uimg_header.py
src/: audio_memory.hh  audio_stream.hh  audio_stream_conf.hh  auto_mute.hh  calibration_storage.cc  calibration_storage.hh  compress.hh  controls.hh  dcblock.hh  debug.hh  elements.hh  epp_lut.hh  flags.hh  flash_block.hh  leds.hh  loop_util.hh  looping_delay.hh  main.cc  modes.hh  params.hh  ping_methods.hh  settings.hh  stm32f7xx_hal_conf.h  system.hh  system_mode.hh  timer.hh  trig_ins.hh
src/bootloader/: animation.cc  animation.hh  audio_stream.hh  bootloader.cc  bootloader.hh  buttons.hh  flash.hh  leds.hh  main.cc  system.hh
src/conf/: board_conf.hh
src/f723-board-conf/: control-conf.hh
src/f723-drivers/: CMakeLists.txt  delay_buffer.cc  delay_buffer.hh  system_target.hh
src/f746-drivers/: CMakeLists.txt  flash.cc
src/hardware_tests/: adc.hh  buttons.hh  gate_ins.hh  hardware_tests.cc  hardware_tests.hh  leds.hh  sd.hh  switch.hh  util.hh
src/mp153-drivers/: CMakeLists.txt  aux_core_main.cc  delay_buffer.hh  flash.cc  ld.h  mmu_ca7.c  stm32mp1xx_hal_conf.h  system_target.hh
tests/: Makefile  auto_mute_tests.cc  wav_writer.hh
tests/auto_mute_example/: Makefile  auto_mute_tests.cc
(+46 files in other folders)
